[project]
name = "grm_export"
version = "2.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "diskcache",
    "enlighten",
    "gpxpy",
    "mapbox-vector-tile",
    "pgeocode",
    "pydantic",
    "pydantic-settings",
    "pyproj",
    "rdp",
]

[project.urls]
Homepage = "https://github.com/davidhyman/green_lane_json"
